--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "history": "4.7.2",
+    "json-server": "^0.17.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
